working processing for adding columns with explanation strength

--- a/.gitignore
+++ b/.gitignore
@@ -150,6 +150,7 @@ credentials.yml
 # Ignore our testing file for python
 dev_testing.py
 scratch.txt
+.DS_Store
 
 # Ignore everything in data folder
 data/
